fix(client): truncate client name in list view

--- a/src/theme/sass/style.scss
+++ b/src/theme/sass/style.scss
@@ -18,5 +18,15 @@ code {
 }
 
 .list-item-padded {
-	padding-right: calc(48px * 2) !important;
+	padding-right: calc(48px * 2 + 8px) !important;
+}
+
+.truncate {
+	flex: 1;
+
+	> *:first-child {
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
 }
